--- a/index.html
+++ b/index.html
@@ -1,7 +1,110 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lakshmi Seshadri - Software Engineer</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+
+    <!-- Header Section -->
+    <header>
+        <h1>Lakshmi Seshadri</h1>
+        <p>Senior Software Engineer - 15 years experience</p>
+        <div class="nav-links">
+            <a href="#about">About Me</a> | 
+            <a href="#resume">Resume</a> | 
+            <a href="#skills">Skills</a> | 
+            <a href="#contact">Contact</a> | 
+            <a href="#blog">Blog</a>
+        </div>
+    </header>
+
+    <!-- About Me Section -->
+    <section id="about">
+        <h2>About Me</h2>
+        <p>Hello! I am Lakshmi Seshadri, a seasoned software engineer with 15 years of experience specializing in software development, project leadership, and technical architecture. I thrive in collaborative environments and enjoy guiding teams through complex projects to deliver high-quality software solutions.</p>
+    </section>
+
+    <!-- Resume Section -->
+    <section id="resume">
+        <h2>Professional Experience</h2>
+
+        <div class="experience-item">
+            <h3>Senior Software Engineer, FareHarbor, Amsterdam</h3>
+            <p>July 2019 - Present</p>
+            <ul>
+                <li>Guided the development and optimization of the Fareharbor Distribution Network.</li>
+                <li>Implemented database sharding to enhance scalability and performance of the operational dashboard.</li>
+                <li>Integrated major third-party services including Google, TripAdvisor, and Expedia.</li>
+                <li>Designed Firebase-based notifications for mobile applications, increasing user engagement.</li>
+            </ul>
+        </div>
+
+        <div class="experience-item">
+            <h3>Software Developer, Booking.com, Amsterdam</h3>
+            <p>November 2017 - June 2019</p>
+            <ul>
+                <li>Developed APIs for the Booking.com Help Center, enhancing platform scalability.</li>
+                <li>Integrated WhatsApp Business API, improving user interaction and communication channels.</li>
+            </ul>
+        </div>
+
+        <!-- Datacom Experience -->
+        <div class="experience-item">
+            <h3>Senior Software Developer, Datacom, Auckland, New Zealand</h3>
+            <p>July 2013 - November 2017</p>
+            <ul>
+                <li>Led development of ‘Online Eftpos’ for streamlined mobile payments.</li>
+                <li>Created <a href="https://my.stuff.co.nz" target="_blank">my.stuff.co.nz</a> to centralize Fairfax’s membership data.</li>
+                <li>Built Chorus self-service portal to automate fiber product orders.</li>
+            </ul>
+        </div>
+
+        <div class="experience-item">
+            <h3>Senior Technology Analyst, Goldman Sachs, Bangalore, India</h3>
+            <p>June 2009 - May 2013</p>
+            <ul>
+                <li>Developed monitoring and configuration tools to optimize messaging support operations.</li>
+                <li>Automated workflows, reducing manual tasks across messaging systems.</li>
+            </ul>
+        </div>
+    </section>
+
+    <!-- Skills Section -->
+    <section id="skills">
+        <h2>Technical Skills</h2>
+        <ul class="skills-list">
+            <li>Languages and Libraries: Python, Django, Java, Perl, Spring, REST</li>
+            <li>Databases: PostgreSQL, MySQL</li>
+            <li>Cloud Platforms: AWS (EC2, RDS, S3, etc.), Google Cloud</li>
+            <li>Frontend: AngularJS, VueJS, HTML, CSS</li>
+            <li>Project Management Tools: JIRA, Confluence, Trello</li>
+        </ul>
+    </section>
+
+    <!-- Education Section -->
+    <section id="education">
+        <h2>Education</h2>
+        <div class="education-item">
+            <h3>Birla Institute of Technology, Mesra, India</h3>
+            <p>Bachelor of Engineering, Computer Science, 2005 - 2009</p>
+        </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact">
+        <h2>Contact</h2>
+        <p>Email: <a href="mailto:lakshmi2110@gmail.com">lakshmi2110@gmail.com</a><br>
+        LinkedIn: <a href="https://www.linkedin.com/in/lakshmi2110" target="_blank">linkedin.com/in/lakshmi2110</a><br>
+        GitHub: <a href="https://github.com/lakshmi2110" target="_blank">github.com/lakshmi2110</a></p>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2024 Lakshmi Seshadri. All rights reserved.</p>
+    </footer>
+
 </body>
 </html>
