--- a/index.html
+++ b/index.html
@@ -14,17 +14,18 @@
         <p>Senior Software Engineer - 15 years experience</p>
         <div class="nav-links">
             <a href="#about">About Me</a> | 
-            <a href="#resume">Resume</a> | 
+            <a href="assets/resume.pdf" target="_blank" rel="noopener noreferrer">Resume</a> |
             <a href="#skills">Skills</a> | 
             <a href="#contact">Contact</a> | 
-            <a href="#blog">Blog</a>
+            <a href="blog.html" target="_blank" rel="noopener noreferrer">Blog</a>
         </div>
     </header>
 
     <!-- About Me Section -->
     <section id="about">
         <h2>About Me</h2>
-        <p>Hello! I am Lakshmi Seshadri, a seasoned software engineer with 15 years of experience specializing in software development, project leadership, and technical architecture. I thrive in collaborative environments and enjoy guiding teams through complex projects to deliver high-quality software solutions.</p>
+        <p>I am Lakshmi Seshadri, a senior software engineer with 15 years of hands-on experience in software development, technical architecture, and leading complex projects. I am committed to creating collaborative, high-performing teams that consistently deliver practical, high-quality solutions that make an impact.
+        </p>
     </section>
 
     <!-- Resume Section -->
@@ -57,7 +58,7 @@
             <p>July 2013 - November 2017</p>
             <ul>
                 <li>Led development of ‘Online Eftpos’ for streamlined mobile payments.</li>
-                <li>Created <a href="https://my.stuff.co.nz" target="_blank">my.stuff.co.nz</a> to centralize Fairfax’s membership data.</li>
+                <li>Built a portal to centralize and manage Fairfax's membership data.</li>
                 <li>Built Chorus self-service portal to automate fiber product orders.</li>
             </ul>
         </div>
